--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -171,7 +171,7 @@ p {
     margin-top: 20px; 
 }
 
-#home-content {
+#index-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
