--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -366,3 +366,24 @@ button {
     font-size: 16px;
     margin-top: 20px;
 }
+#login-warning {
+    display: none;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: grey;
+    color: red;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+#login-warning button {
+    background: grey;
+    border: none;
+    color:red;
+    font-size: 16px;
+    margin-left: 10px;
+    cursor: pointer;
+}
