--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -372,17 +372,17 @@ button {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: grey;
-    color: red;
+    background-color: rgb(230, 104, 104);
+    color: white;
     padding: 10px 20px;
     border-radius: 5px;
     z-index: 1000;
 }
 
 #login-warning button {
-    background: grey;
+    background-color: rgb(230, 104, 104);
     border: none;
-    color:red;
+    color:white;
     font-size: 16px;
     margin-left: 10px;
     cursor: pointer;
