--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -17,6 +17,7 @@
 
 /* Card body containing the form content */
 .card-body {
+    background:grey;
     padding: 30px 40px; /* Adjust padding for card */
     margin: 0;
     border-radius: 10px;
