--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     width: 100%;
     padding: 20px;
-    background-color: #cecdcd;
+    background-color: grey;
     border-radius: 10px;
     box-shadow: 0;
     display: flex;
