--- a/backend/frontend/quiz-results.css
+++ b/backend/frontend/quiz-results.css
@@ -19,7 +19,7 @@
 .coach-image {
     width: 100%; 
     max-width: 500px; 
-    height: 600px; 
+    height: auto; 
     border-radius: 20px;       
 }
 
@@ -29,8 +29,9 @@
     display: flex;
     flex-direction: column;        
     justify-content: center;       
-    padding-left: 20px;           
-    text-align: left;             
+    padding-left: 20px;
+    padding-bottom: 20px;          
+    text-align: left;            
 }
 
 #result p {
