--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -49,16 +49,28 @@ p {
 
   }
   
-.person-icon, .flag-icon {
-    width: 50px !important;
-    height: 50px!important;
-    background-color: #eee !important;
-    border-radius: 50% !important;
-    margin-left: 20px !important;
-    overflow: hidden !important ;
+.person-icon {
+    width: auto;
+    height: 50px;
+    background-color: #eee;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.flag-icon {
+    width: 50px;
+    height: 50px;
+    background-color: #eee;
+    border-radius: 50%;
+    margin-left: 20px;
+    overflow: hidden;
 }
 
-.person-icon img, .flag-icon img {
+.person-icon img {
+    width: 100%;
+    height: 100%;
+    
+}
+.flag-icon img {
     width: 100%;
     height: 100%;
     
