--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -148,16 +148,16 @@ p {
 
 /* Image Styling */
 .image-container {
-    flex: 0.5; /* Takes up 1/3 of the space */
-    border-radius: 10px;
+    flex: 1; /* Takes up 1/3 of the space */
+  
 }
 
 .image {
     width: 100%;
-    height: auto;
+    height: 600px;
     max-width: 800px; 
-    border-radius: 10px;
-    padding: 120px 40px 40px 40px;
+    border-radius: 20px;
+    
 }
 /* Container for the image and text */
 .vr-content {
