--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -44,7 +44,7 @@ p {
     background-image: url('logo.png');
     background-size: contain; /* Adjusts the image to fit within the div */
     background-repeat: no-repeat;
-    background-position: center; /* Centers the image */
+    background-position: center; 
     border-radius: 50px;
 
   }
