--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -42,7 +42,7 @@ p {
     height: 100px;
     display: block;
     background-image: url('logo.png');
-    background-size: contain; /* Adjusts the image to fit within the div */
+    background-size: contain; 
     background-repeat: no-repeat;
     background-position: center; 
     border-radius: 50px;
