--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -452,7 +452,7 @@ button {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgb(230, 104, 104);
+    background-color:rgb(128,0,32);
     color: white;
     padding: 10px 20px;
     border-radius: 50px;
