--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -33,13 +33,13 @@ p {
     background-color: rgb(102, 100, 100); 
     padding: 20px 40px !important ; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    height: 100px !important ; 
+    height: auto; 
 }
 
 .logo {
     max-width: 200px; /* Set a max-width for the logo */
     max-height: 100%;
-    height: 100px;
+    height: auto;
     display: block;
     background-image: url('logo.png');
     background-size: contain; 
