--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -90,7 +90,7 @@ p {
 .nav-links a {
     text-decoration: none;
     color: white;
-    font-size: 18px; 
+    font-size: 30px; 
     padding: 12px 20px; 
 }
 
@@ -104,7 +104,7 @@ p {
     color: white;
     padding: 12px 25px; 
     border-radius: 30px;
-    font-size: 18px; 
+    font-size: 25px; 
     font-weight: bold;
     margin-right: 20px; 
 }
@@ -178,8 +178,9 @@ p {
 
 /* Image styling */
 .vr-image {
-    height: auto;
-    max-width: 100%;
+    width: 100%; /* Image takes up 100% of the container width */
+    max-width: 700px; 
+    height: 720px; /* Maintain aspect ratio */
     border-radius: 20px;
 }
 
