--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -123,6 +123,7 @@ p {
     font-size: 18px;
     font-weight: bold; */
     width :auto;
+    cursor: pointer;
     text-decoration: none;
     background-color: rgb(128,0,32);
     color: white;
@@ -132,6 +133,9 @@ p {
     font-weight: bold;
     margin-right: 20px;    
    
+}
+.about-login-btn:hover {
+    background-color: grey;
 }
 
 .get-started-btn {
