--- a/backend/frontend/quiz.css
+++ b/backend/frontend/quiz.css
@@ -77,37 +77,40 @@ h1 {
 /* Button Styling */
 .btn-primary {
     text-decoration: none;
-    background-color: red;
+    background-color: rgb(128,0,32);
     color: white;
     padding-bottom: 120px; /* Larger padding */
     border-radius: 30px;
     font-size: 18px; /* Increased font size */
     font-weight: bold;
-    margin-right: 20px; 
+    margin-right: 20px;
+    outline: none; 
 }
 .btn-secondary{
     text-decoration: none;
-    background-color: red;
+    background-color: rgb(128,0,32);
     color: white;
     padding: 12px 25px; /* Larger padding */
     border-radius: 30px;
     font-size: 18px; /* Increased font size */
     font-weight: bold;
     margin-right: 20px; 
+    outline: none; 
 }
 .btn-success {
     text-decoration: none;
-    background-color: red;
+    background-color:rgb(128,0,32);
     color: white;
     padding: 12px 25px; /* Larger padding */
     border-radius: 30px;
     font-size: 18px; /* Increased font size */
     font-weight: bold;
-    margin-right: 20px; 
+    margin-right: 20px;
+    outline: none; 
 }
 /* Button hover effects */
 .btn-primary:hover, .btn-secondary:hover, .btn-success:hover {
-    background-color: darkred;
+    background-color: darkgray;
 }
 
 /* Buttons container */
@@ -128,7 +131,7 @@ h1 {
 }
 
 .result.incorrect {
-    color: red;
+    color: rgb(128,0,32);
 }
 
 /* Responsive Design */
